# simulation-engine-standalone

./: .dockerignore  .gitignore  README.md  SCENARIO_INTEGRATION_PLAN.md  docker-compose.yml  start.bat
cyber/backend/: .dockerignore  Dockerfile  pyproject.toml
cyber/backend/app/: main.py
cyber/backend/app/api/: auth.py  catalog.py  dashboard.py  jilla.py  lab.py  live.py  runs.py  scenarios.py
cyber/backend/app/core/: settings.py
cyber/backend/app/db/: __init__.py  base.py  models.py  seed.py
cyber/backend/app/engine/: __init__.py  config.py  enums.py  environment.py  events.py  kpis.py  live_fire_runner.py  posture.py  result.py  run.py  scenario.py  workflows.py  world.py
cyber/backend/app/lab/: __init__.py  base.py  caldera_lab.py  docker_lab.py  live_fire.py  manager.py  pool.py  tools.py  windows_ad_lab.py
cyber/backend/app/live/: __init__.py  auto.py  blue_playbook.py  guided.py  guided_runtime.py  live_report.py  manager.py  missions.py  red_playbook.py  session.py  soc_playbook.py
cyber/backend/app/reports/: __init__.py  generator.py
cyber/backend/app/scenarios/: __init__.py  loader.py
cyber/backend/app/services/: __init__.py  run_manager.py  runner.py
cyber/backend/app/studio/: __init__.py  ai.py  catalog.py  db.py  models.py  routes.py  scoring.py  service.py  settings_store.py  ws.py
cyber/backend/app/tripwire/: __init__.py  api.py  certificate.py  engine.py  scenario.py  (+4 more)
cyber/backend/tests/: conftest.py  test_api.py  test_engine.py  test_guided.py  test_lab.py  test_live.py  test_sim.py  test_studio.py  test_tripwire.py  test_v2.py
(+288 files in other folders)
